# fauxy

./: .envrc  .gitignore  README.md  example.py  flake.nix  poetry.toml  pyproject.toml  record.py  replay.py  various_configurations.py
fauxy/: __init__.py  app.py  library.py  record.py  replay.py
joke/Any/: content  meta.json
joke/Any/045d2b28/: key.json  meta.json  response.content
joke/Any/950ae5ae/: key.json  meta.json  response.content
