[tool.poetry]
name = "fauxy"
version = "0.0.2"
description = "Faux responses from proxying"
authors = ["Charlie Groves <c@sevorg.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/groves/fauxy"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
uvicorn = "^0.22.0"
starlette = "^0.26.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
